# Shopping-List-

./: README.md  agents.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  shopping.db
backend/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py
backend/app/services/: __init__.py  recipe_scraper.py
backend/shopping_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_app.py  test_edge_cases.py
frontend/: App.tsx  app.json  package-lock.json  package.json  tsconfig.json
frontend/__tests__/: App.test.tsx  Integration.test.tsx
frontend/src/components/: AddInventoryModal.tsx
frontend/src/hooks/: useAppData.ts
