[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopping-backend"
version = "0.1.0"
description = "Pantry and meal planning API"
authors = [{name = "Shopping List AI"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "python-dateutil>=2.9",
  "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
test = [
  "pytest>=8.1",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]
